--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: pink;
+    background: whitesmoke;
     text-align: center;
 
     /* Positioning the container relatively */
