--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
         /* Distribute items with equal space around them */
         align-items: center;
         /* Align items vertically in the center */
-        height: 400px;
+        height: 250px;
         /* Set the height of the container */
         background-color: #f0f0f0;
         /* Optional: Background color for better visibility */
@@ -23,6 +23,7 @@ body {
         /* Set the width of each image */
         height: auto;
         /* Maintain aspect ratio */
+        border-radius: 75%;
     }
 
 }
